# blackline-atlas

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py  sam3_bridge.py
app/api/: routes.py
app/core/: config.py
app/schemas/: agent.py  alert.py  annotated_case.py  asset.py  evidence_candidate.py  frame.py  health.py  (+14 more)
docs/: BLUEPRINT.md  DATASET_RESEARCH.md  DEMO_RECORDING_SCENARIO.md  HACKATHON_DEMO_TELEPROMPTER.md  HACKATHON_LIVE_PREVIEW_TELEPROMPTER.md  HF_JOBS.md  JUDGE_BRIEF.md  LIVE_PREVIEW_RECORDING_SCENARIO.md  SAM3_EVIDENCE.md  SPECS.md  TRAINING_BLUEPRINT.md
scripts/: local_preflight.py
tests/: conftest.py  test_acled_lead_source.py  test_adapter_acceptance.py  test_agent_api.py  test_agent_command_eval.py  test_agent_planner.py  test_agent_user_flow_matrix.py  test_alert_pipeline.py  test_api.py  test_asset_schema.py  test_aux_train_materializer.py  test_baseline_compare.py  test_candidate_backend_smoke.py  test_conflict_aux_materializer.py  test_evidence_vlm_sft_eval.py  test_external_benchmark_normalizers.py  test_external_benchmark_seed_slices.py  test_frame_cache.py  test_frame_client.py  test_frame_filters.py  test_gdelt_cloud_lead_source.py  test_hf_jobs_benchmark_helper.py  test_internal_benchmark_materializer.py  test_lead_registry_refresh.py  test_leap_vlm_export.py  test_lfm25_prompted_eval.py  test_lfm25_vl_corpus.py  test_liquid_analyst.py  test_local_liquid_vl_bridge.py  test_model_benchmark.py  test_model_gateway.py  test_model_seams.py  test_model_status_catalog.py  test_non_demo_eval_pack.py  test_operator_live_flow.py  test_probe_exact_site_windows.py  test_probe_train_family_windows.py  test_publish_public_benchmark_repo.py  test_run_train_backend_hf_job.py  test_sam3_bridge.py  (+14 more)
training/: __init__.py
ui/: README.md  index.html  shell.css  shell.js
(+125 files in other folders)
