[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackline-atlas"
version = "0.1.0"
description = "Blackline Atlas starter scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "huggingface-hub>=0.35.0",
  "httpx>=0.28.0",
  "PyYAML>=6.0.3",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]
train = [
  "huggingface-hub>=0.35.0",
  "PyYAML>=6.0.3",
]
vlm = [
  "peft>=0.17.0",
  "pillow>=10.0.0",
  "torch>=2.8.0",
  "transformers>=5.1.0",
]
local-vlm = [
  "mlx-vlm==0.3.9",
  "pillow>=10.0.0",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
